--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,9 @@
-
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden; /* Prevents horizontal scroll */
+  width: 100%;
+}
 body{
     margin: 0px;
     overflow: hidden; /* Hide scrollbars */
