--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,3 +11,60 @@ body{
     overflow: hidden; /* Hide scrollbars */
     cursor: wait;
 }
+
+@font-face {
+  font-family: 'yekan';
+  src: url('/fonts/thin.woff') format('woff');
+  font-weight: 100; /* Thin */
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'yekan';
+  src: url('/fonts/light.woff') format('woff');
+  font-weight: 300; /* Light */
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'yekan';
+  src: url('/fonts/regular.woff') format('woff');
+  font-weight: 400; /* Regular */
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'yekan';
+  src: url('/fonts/medium.woff') format('woff');
+  font-weight: 500; /* Medium */
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'yekan';
+  src: url('/fonts/bold.woff') format('woff');
+  font-weight: 700; /* Bold */
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'yekan';
+  src: url('/fonts/extrablack.woff') format('woff');
+  font-weight: 900; /* Extra Black */
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'khodkar';
+  src: url('/fonts/khodkar.TTF') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {  font-family: khodkar;  font-style: normal;  font-weight: 200 700;  font-display: swap;  src: url("/fonts/khodkar.TTF") format("truetype");}
