FIX, FONT, BENTO

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,11 +5,16 @@ html, body {
   padding: 0;
   overflow-x: hidden; /* Prevents horizontal scroll */
   width: 100%;
+  font-family: 'yekan';
 }
 body{
     margin: 0px;
     overflow: hidden; /* Hide scrollbars */
     cursor: wait;
+}
+
+.title{
+  font-family: 'khodkar';
 }
 
 @font-face {
